<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/deskbg" >

    <include
        android:id="@+id/layout_top_bar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_top_bar"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_ref_num"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text"
            android:gravity="center_vertical"
            android:hint="@string/ref_num"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_status"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/clicktobg"
                android:gravity="center"
                android:textSize="20sp" 
                android:padding="5dp"
                android:text="@string/status"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_complete_the_form"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:textSize="20sp" 
                android:layout_margin="5dp"
                android:background="@drawable/clicktobg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/complete_the_form"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>